[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GameMap/UnitOverlay.gd" type="Script" id=1]
[ext_resource path="res://Resources/board_overlay_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/GameBoard.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Unit/UnitPath.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/ActionProcessor.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Unit/UnitManager.gd" type="Script" id=8]
[ext_resource path="res://Scenes/GameMap/GameMap.tscn" type="PackedScene" id=10]

[node name="Main" type="Node2D"]

[node name="GameBoard" type="YSort" parent="."]
script = ExtResource( 4 )

[node name="UnitManager" type="Node" parent="GameBoard"]
script = ExtResource( 8 )

[node name="ActionProcessor" type="Node" parent="GameBoard"]
script = ExtResource( 7 )

[node name="GameMap" parent="GameBoard" instance=ExtResource( 10 )]

[node name="UnitOverlay" type="TileMap" parent="GameBoard/GameMap"]
tile_set = ExtResource( 2 )
format = 1
script = ExtResource( 1 )

[node name="UnitPath" parent="GameBoard/GameMap" instance=ExtResource( 6 )]

[node name="HUD" type="CanvasLayer" parent="GameBoard"]
follow_viewport_enable = true

[node name="DEBUG_LABEL" type="Label" parent="GameBoard/HUD"]
margin_left = 19.0
margin_top = 12.0
margin_right = 59.0
margin_bottom = 26.0

[connection signal="move_unit" from="GameBoard/ActionProcessor" to="GameBoard" method="_on_ActionProcessor_move_unit"]
